<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/init_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/math"
    tools:context=".InitActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/init_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/UI_welcome_str"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/init_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"></RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>