<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainmenufragments.QuizFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:id="@+id/quiz_page_refresh_layout">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/quiz_list_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:id="@+id/quiz_page_class_info_text"
                    android:text="@string/UI_current_class_name"/>

            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/common_google_signin_btn_tint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24"
        tools:ignore="VectorDrawableCompat" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/module_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="false"
        android:focusable="true"
        android:tint="@color/common_google_signin_btn_tint"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_notes_24"
        tools:ignore="VectorDrawableCompat" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="false"
        android:focusable="true"
        android:tint="@color/common_google_signin_btn_tint"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/module_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>