...
        android:text="@string/UI_stats"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/go_to_quiz"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/delete_module_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/stats_button"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
...
